# aoc20

./: Cargo.toml  Readme.md
benches/: day1.rs
src/: main.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  utils.rs
tests/: day10_test.rs  day11_test.rs  day12_test.rs  day13_test.rs  day14_test.rs  day15_test.rs  day18_test.rs  day2_test.rs  day3_test.rs  day4_test.rs  day5_test.rs  day6_test.rs  day7_test.rs  day8_test.rs  day9_test.rs
