[package]
name = "aoc20"
version = "0.1.0"
authors = ["assert0 <assert0@githumb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
#array2d = "0.2.1"
#multiarray = "0.1.3"
#num = "0.3.1"
#scan_fmt = "0.2.5"
#vec-tree = "0.1.2"
#rand = "0.7.3"
#permutator = "0.4.0"
#queues = "1.1.0"
#crossbeam = "0.8.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "day1"
harness = false